cluster/manifests/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
